--- a/styleguide.html
+++ b/styleguide.html
@@ -3,8 +3,8 @@ layout: default
 title: Patterns
 section: styleguide
 ---
-<div class="holder main-holder">
-	<div class="row main-row">
+<div class="main">
+	<div class="row">
 		<div class="main-content">
 
 			<h2 class="section-title">Base Elements</h2>
