--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ section: home
 	<div class="row">
 		<div class="inner">
 			<h1>Informatie Architecten in <em>Gent</em>, <em>Genk</em> &amp; <em>er tussenin</em></h1>
-			<p>Ja! Ook in 2014 komt er een Wereld IA in ons landje. Dit maal gaat <a href="http://www.thesedays.com/" title="These Days">These Days</a> de locatie voorzien op 15 februari. <a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://istoireservices.be/" title="iStoire Services">iStoire Services</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a> zetten hun schouders mee onder de organisatie.</p>
-			<p><a href="{{ site.url }}/register.html" class="btn">Nu inschrijven</a></p>
+			<p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons landje. Dit maal gaat <a href="http://www.thesedays.com/" title="These Days">These Days</a> de locatie voorzien op 15 februari. <a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://istoireservices.be/" title="iStoire Services">iStoire Services</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a> zetten hun schouders mee onder de organisatie.</p>
+			<p><a href="{{ site.url }}/register.html" class="btn btn--pos">Nu inschrijven</a></p>
 		</div>
 	</div>
 </main>
 
 <aside class="blog blog--list">
-	{% for post in site.posts %}
+	{% for post in site.posts limit:4 %}
 		<article class="media media--block media--link js-link-block">
 			<header class="media__header">
 				<h2><a href="{{ site.url }}{{ post.url }}" class="js-block-link">{{ post.title }}</a></h2>
@@ -25,3 +25,7 @@ section: home
 		</article>
 	{% endfor %}
 </aside>
+
+<div class="cta cta--home">
+	<a href="{{ site.url }}/blog.html" title="Blog" class="btn btn--neg">Meer artikels lezen?</a>
+</div>
