--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: default
 title: Homepage
 section: home
+published: true
 ---
 
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Informatie Architecten in <em>Gent</em>, <em>Genk</em> &amp; <em>er tussenin</em></h1>
+			<h1>Wereld dag van Informatie Architectuur <em>15 februari</em>, <em>Antwerpen</em></h1>
 			<p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons landje. Dit maal gaat <a href="http://www.thesedays.com/" title="These Days">These Days</a> de locatie voorzien op 15 februari. <a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://istoireservices.be/" title="iStoire Services">iStoire Services</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a> zetten hun schouders mee onder de organisatie.</p>
 			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Nu inschrijven</a></p>
 		</div>
