--- a/register.html
+++ b/register.html
@@ -2,6 +2,7 @@
 layout: default
 title: Inschrijven
 section: register
+published: true
 ---
 
 <!-- <main class="hero">
@@ -25,9 +26,11 @@ section: register
 			<p>Inschrijven maar ...</p>
 		</header>
 		<div class="iframe-embed main__body">
-			<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>
+		<!--	<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>-->
+          <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
 		</div>
 	</div>
+ 
 </main>
 
 <aside class="blog blog--list">
