--- a/register.html
+++ b/register.html
@@ -25,10 +25,10 @@ published: true
 			<h1>{{ page.title }}</h1>
 			<p>Inschrijven maar ...</p>
 		</header>
-		<div class="iframe-embed main__body">
-		<!--	<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>-->
-          <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
-		</div>
+			<!--	<div class="iframe-embed main__body">
+	<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>
+        
+		</div>-->  <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
 	</div>
  
 </main>
