--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,14 @@
 layout: default
 title: Blog
 section: blog
+published: true
 ---
 
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Blog</h1>
-			<p>Een fantastische introductie voor deze blog ...</p>
+			<h1>Nieuwe kennis</h1>
+			<p>Op deze plek vind je de presentaties van de voorbije jaren en nieuwsvonken van de volgende editie.</p>
 		</div>
 	</div>
 </main>
