--- a/register.html
+++ b/register.html
@@ -25,10 +25,10 @@ published: true
 			<h1>{{ page.title }}</h1>
 			<p>Voorlopig hebben we plaats voor 50 deelnemers. Als je een goed 'probleem' hebt waarrond we kunnen werken op de mini-hackathon, mag je dat zeker vermelden. Wie inschrijft, maar niet opdracht moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
 		</header>
-			<!--	<div class="iframe-embed main__body">
-	<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>
-        
-		</div>-->  <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
+			<div class="iframe-embed main__body">
+<!--		<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>-->
+         <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
+		</div> 
 	</div>
  
 </main>
