toch maar blog noemen

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ published: true
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Nieuwe kennis</h1>
+			<h1>Blog</h1>
 			<p>Op deze plek vind je de presentaties van de voorbije jaren en nieuwsvonken van de volgende editie.</p>
 		</div>
 	</div>
