--- a/praktisch.html
+++ b/praktisch.html
@@ -1,3 +1,8 @@
-## Tis toch belangrijk dat je er ook geraakt
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+<main class="hero">
+	<div class="row">
+		<div class="inner">
+			<h1>Tis toch belangrijk dat je er ook geraakt</h1>
+			<p>nie?</p>
+		</div>
+	</div>
+</main>
