--- a/program.html
+++ b/program.html
@@ -2,13 +2,24 @@
 layout: default
 title: Program
 section: program
+published: true
 ---
 
 <main class="hero">
 	<div class="row">
 		<div class="inner">
 			<h1>Programma</h1>
+          <h2>9 tot 10: Koffie</h2>
+          <h2>10 tot 12u30: Keynotes</h2>
 			<p>Wat, wie, hoe, waar, waarom?</p>
+          <p>Wat, wie, hoe, waar, waarom?</p>
+          <p>Wat, wie, hoe, waar, waarom?</p>
+            <h2>13u30 tot 16u: Cases of Hackathon</h2>
+			<p>Wat, wie, hoe, waar, waarom?</p>
+          <p>Wat, wie, hoe, waar, waarom?</p>
+        	<h2>16u tot 16u30: Bossgame</h2>
+			<p>Wat, wie, hoe, waar, waarom?</p>
+          <h2>Vanaf 16u30: Cocktail-o'clock</h2>
 		</div>
 	</div>
 </main>
