--- a/program.html
+++ b/program.html
@@ -11,13 +11,14 @@ published: true
 			<h1>Programma</h1>
           <h2>9 tot 10: Koffie</h2>
           <h2>10 tot 12u30: Keynotes</h2>
-			<p>Wat, wie, hoe, waar, waarom?</p>
-          <p>Wat, wie, hoe, waar, waarom?</p>
-          <p>Wat, wie, hoe, waar, waarom?</p>
+          <p>Smart Citizenship door ?</p>
+          <p>Open Data: door PB?</p>
+          <p>Service design met niemand minder dan Tine Peeters van Studio Dott</p>
             <h2>13u30 tot 16u: Cases of Hackathon</h2>
-			<p>Wat, wie, hoe, waar, waarom?</p>
-          <p>Wat, wie, hoe, waar, waarom?</p>
-        	<h2>16u tot 16u30: Bossgame</h2>
+          <p>Case 1: Ontwerpen met dementie door NH</p>
+          <p>Case 2: Co creatie door K van N</p>
+          <p>Mini-hackathon: was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
+        	<h2>Hackathon</h2>
 			<p>Wat, wie, hoe, waar, waarom?</p>
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
 		</div>
