--- a/praktisch.html
+++ b/praktisch.html
@@ -2,13 +2,19 @@
 layout: default
 title: Praktisch
 section: praktisch
+published: true
 ---
 
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Tis toch belangrijk dat je er ook geraakt</h1>
-			<p>nie?</p>
+			<h1>Pratisch</h1>
+          <h2>Bij These Days in Antwerpen</h2>
+          <p>adres+link</p>
+          <h2>Met de trein</h2>
+          <p>Uitleg</p>
+          <h2>Parkeren</h2>
+          <p>Uitleg</p>
 		</div>
 	</div>
 </main>
