wat titels in bold gezet

--- a/program.html
+++ b/program.html
@@ -11,15 +11,14 @@ published: true
 			<h1>Programma</h1>
           <h2>9 tot 10: Koffie</h2>
           <h2>10 tot 12u30: Keynotes</h2>
-          <p>Smart Citizenship door ?</p>
-          <p>Open Data: door PB?</p>
-          <p>Service design met niemand minder dan Tine Peeters van Studio Dott</p>
+          <p><strong>Smart Citizenship</strong> door ?</p>
+          <p><strong>Open Data</strong> door PB?</p>
+          <p><strong>Service design</strong> met niemand minder dan Tine Peeters van Studio Dott</p>
             <h2>13u30 tot 16u: Cases of Hackathon</h2>
-          <p>Case 1: Ontwerpen met dementie door NH</p>
-          <p>Case 2: Co creatie door K van N</p>
-          <p>Mini-hackathon: was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
-        	<h2>Hackathon</h2>
-			<p>Wat, wie, hoe, waar, waarom?</p>
+          <p><strong>Case 1:</strong> Ontwerpen met dementie door NH</p>
+          <p><strong>Case 2:</strong> Co creatie door K van N</p>
+          <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
+        
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
 		</div>
 	</div>
