--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ published: true
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Informatie Architecten <em>Verenigt u</em></h1>
-          <p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons land. <br/>Dit maal gaan we naar <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op het programma staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
+          <p>Liefhebbers van</p><h1>Informatie Architectuur <em>Verenigt u</em></h1>
+          <p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons land. <br/>Dit maal gaan we naar <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
 			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
 		</div>
 	</div>
