--- a/program.html
+++ b/program.html
@@ -19,7 +19,9 @@ published: true
           <p><strong>Case 2:</strong> Co creatie door K van N</p>
           <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
         
+
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
-		</div>
+	<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
+      </div>
 	</div>
 </main>
