--- a/praktisch.html
+++ b/praktisch.html
@@ -15,7 +15,10 @@ published: true
           <h2>Met de trein</h2>
           <p>Uitleg</p>
           <h2>Parkeren</h2>
-          <p>Ingang ondergrondse parking langs de Karel Oomsstraat<br /><a href="https://maps.google.be/maps?f=q&source=s_q&hl=nl&geocode&q=51.194633,+4.408996&aq&sll=51.194643,4.4088<br06&sspn=0.001503,0.003484&vpsrc=0&ie=UTF8&ll=51.194285,4.408672&spn=0.012022,0.027874&t=m&z=16&iwloc=A&layer=c&cbll=51.19455,4.40876&panoid=KinmZmsiyWxXpbZWWFWaoA&cbp=12,68.15,,0,4.33">Langs waar is da?</a></p>
-		</div>
+          <p>Ingang ondergrondse parking langs de Karel Oomsstraat<br /><a href="https://maps.google.be/maps?f=q&source=s_q&hl=nl&geocode&q=51.194633,+4.408996&aq&sll=51.194643,4.4088<br06&sspn=0.001503,0.003484&vpsrc=0&ie=UTF8&ll=51.194285,4.408672&spn=0.012022,0.027874&t=m&z=16&iwloc=A&layer=c&cbll=51.19455,4.40876&panoid=KinmZmsiyWxXpbZWWFWaoA&cbp=12,68.15,,0,
+4.33">Langs waar is da?</a></p>
+	<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
+      </div>
 	</div>
 </main>
+
