--- a/program.html
+++ b/program.html
@@ -21,7 +21,12 @@ published: true
         
 
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
-	<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
+<div class="cta cta--post">
+		<div class="row">
+			<h3>Helemaal overtuigd nu ?</h3>
+				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
+		</div>
+	</div>
       </div>
 	</div>
 </main>
