--- a/program.html
+++ b/program.html
@@ -21,12 +21,12 @@ published: true
         
 
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
-<div class="cta cta--post">
-		<div class="row">
-			<h3>Helemaal overtuigd nu ?</h3>
+
+		<hr>
+			<h3>Helemaal overtuigd ?</h3>
 				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
-		</div>
-	</div>
+	
+
       </div>
 	</div>
 </main>
