--- a/program.html
+++ b/program.html
@@ -23,7 +23,7 @@ published: true
           <h2>Vanaf 16u30: Cocktail-o'clock</h2>
           <br>
 		<hr>
-			<h3>Helemaal overtuigd ?</h3>
+			<p>Helemaal overtuigd ?</p>
 				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
 	
 
