--- a/program.html
+++ b/program.html
@@ -9,24 +9,29 @@ published: true
 	<div class="row">
 		<div class="inner">
 			<h1>Programma</h1>
-          <h2>9 tot 10: Koffie</h2>
-          <h2>10 tot 12u30: Keynotes</h2>
-          <p><strong>Smart Citizenship</strong> door ?</p>
-          <p><strong>Open Data</strong> door PB?</p>
-          <p><strong>Service design</strong> met niemand minder dan Tine Peeters van Studio Dott</p>
-            <h2>13u30 tot 16u: Cases of Hackathon</h2>
-          <p><strong>Case 1:</strong> Ontwerpen met dementie door NH</p>
-          <p><strong>Case 2:</strong> Co creatie door K van N</p>
-          <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
-        
-
-          <h2>Vanaf 16u30: Cocktail-o'clock</h2>
-          <br>
-		<hr>
-			<p>Helemaal overtuigd ?</p>
-				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
-	
-
-      </div>
+			<hr>
+			<h2>9 tot 10: Koffie</h2>
+			<p><strong>Kennismaking</strong> etc.</p>
+			<hr class="divider--dotted">
+			<h2>10 tot 12u30: Keynotes</h2>
+			<p><strong>Smart Citizenship</strong> door ?</p>
+			<p><strong>Open Data</strong> door PB?</p>
+			<p><strong>Service design</strong> met niemand minder dan Tine Peeters van Studio Dott</p>
+			<hr class="divider--dotted">
+			<h2>13u30 tot 16u: Cases of Hackathon</h2>
+			<p><strong>Case 1:</strong> Ontwerpen met dementie door NH</p>
+			<p><strong>Case 2:</strong> Co creatie door K van N</p>
+			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
+			<hr class="divider--dotted">
+			<h2>Vanaf 16u30: Cocktail-o'clock</h2>
+			<p><strong>Afscheid</strong> etc.</p>
+		</div>
 	</div>
 </main>
+
+<aside class="cta cta--post">
+	<div class="row">
+		<h3>Helemaal overtuigd ?</h3>
+		<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
+	</div>
+</aside>
