--- a/blog.html
+++ b/blog.html
@@ -15,13 +15,24 @@ published: true
 </main>
 
 <aside class="blog blog--list">
+	<div class="row">
 	{% for post in site.posts %}
-		<article class="media media--block media--link js-link-block">
+		<article class="media media--block">
 			<header class="media__header">
-				<h2><a href="{{ site.url }}{{ post.url }}" class="js-block-link">{{ post.title }}</a></h2>
-				<p class="blog__date">{{ post.date | date_to_string }}</p>
+				<h2 class="blog--list__title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
+				<p class="blog--list__date">{{ post.date | date_to_string }}</p>
 			</header>
-			<p class="media__body">{{ post.excerpt | truncate: 100 }}</p>
+			<div class="media__body">
+				<p>
+					{{ post.excerpt }}
+				</p>
+				<p class="blog--list__link">
+					<a href="{{ site.url }}{{ post.url }}" >
+					Verder lezen
+					</a>
+				</p>
+			</div>
 		</article>
 	{% endfor %}
+	</div>
 </aside>
