--- a/index.html
+++ b/index.html
@@ -8,23 +8,35 @@ published: true
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-          <p>Liefhebbers van</p><h1>Informatie Architectuur <em>Verenigt u</em></h1>
-          <p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons land. <br/>Dit maal gaan we naar <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
+			<p class="prelude">Liefhebbers van</p>
+			<h1>Informatie Architectuur <em>Verenigt U</em></h1>
+			<p class="intro">Ja! Ook in 2014 komt er een Wereld IA in ons land. <br/>Dit maal gaan we naar <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
 			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
 		</div>
 	</div>
 </main>
 
 <aside class="blog blog--list">
+	<div class="row">
 	{% for post in site.posts limit:4 %}
-		<article class="media media--block media--link js-link-block">
+		<article class="media media--block">
 			<header class="media__header">
-				<h2><a href="{{ site.url }}{{ post.url }}" class="js-block-link">{{ post.title }}</a></h2>
-				<p class="blog__date">{{ post.date | date_to_string }}</p>
+				<h2 class="blog--list__title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
+				<p class="blog--list__date">{{ post.date | date_to_string }}</p>
 			</header>
-			<p class="media__body">{{ post.excerpt | truncate: 100 }}</p>
+			<div class="media__body">
+				<p>
+					{{ post.excerpt }}
+				</p>
+				<p class="blog--list__link">
+					<a href="{{ site.url }}{{ post.url }}" >
+					Verder lezen
+					</a>
+				</p>
+			</div>
 		</article>
 	{% endfor %}
+	</div>
 </aside>
 
 <div class="cta cta--home">
