--- a/register.html
+++ b/register.html
@@ -5,42 +5,38 @@ section: register
 published: true
 ---
 
-<!-- <main class="hero">
-	<div class="row">
-		<div class="inner">
-			<h1>Inschrijven</h1>
-			<p>Inschrijven maar ...</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="iframe-embed">
-			<iframe src="http://twikilist.com/embed/WorldIADayGenk" height="3800" width="500" frameborder="0"></iframe>
-		</p>
-	</div>
-</main> -->
-
 <main class="main">
 	<div class="row">
 		<header class="main__header">
 			<h1>{{ page.title }}</h1>
-          <p>Voorlopig hebben we plaats voor <strong>50 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="programma.html">mini-hackathon</a>, mag je dat zeker vermelden. Wie inschrijft, maar <strong>niet opdaagt</strong> moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
+			<p>Voorlopig hebben we plaats voor <strong>50 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="programma.html">mini-hackathon</a>, mag je dat zeker vermelden. Wie inschrijft, maar <strong>niet opdaagt</strong> moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
 		</header>
-			<div class="iframe-embed main__body">
-<!--		<iframe src="http://twikilist.com/embed/WorldIADayGenk" frameborder="0"></iframe>-->
-         <script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
-		</div> 
+		<div class="iframe-embed main__body">
+			<!-- <iframe src="http://twikilist.com/include/WIAD2014Antwerpen" frameborder="0"></iframe> -->
+			<script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
+		</div>
 	</div>
- 
 </main>
 
 <aside class="blog blog--list">
+	<div class="row">
 	{% for post in site.posts limit:4 %}
-		<article class="media media--block media--link js-link-block">
+		<article class="media media--block">
 			<header class="media__header">
-				<h2><a href="{{ site.url }}{{ post.url }}" class="js-block-link">{{ post.title }}</a></h2>
-				<p class="blog__date">{{ post.date | date_to_string }}</p>
+				<h2 class="blog--list__title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
+				<p class="blog--list__date">{{ post.date | date_to_string }}</p>
 			</header>
-			<p class="media__body">{{ post.excerpt | truncate: 100 }}</p>
+			<div class="media__body">
+				<p>
+					{{ post.excerpt }}
+				</p>
+				<p class="blog--list__link">
+					<a href="{{ site.url }}{{ post.url }}" >
+					Verder lezen
+					</a>
+				</p>
+			</div>
 		</article>
 	{% endfor %}
+	</div>
 </aside>
