--- a/program.html
+++ b/program.html
@@ -10,21 +10,22 @@ published: true
 		<div class="inner">
 			<h1>Programma</h1>
 			<hr>
-			<h2>9 tot 10: Koffie</h2>
-			<p><strong>Kennismaking</strong> etc.</p>
+			<h2>9u30 tot 10u: Koffie met koekjes</h2>
+			<h2>10u: Officiële openingspeech</h2>
 			<hr class="divider--dotted">
-			<h2>10 tot 12u30: Keynotes</h2>
-			<p><strong>Smart Citizenship</strong> door ?</p>
-			<p><strong>Open Data</strong> door PB?</p>
-			<p><strong>Service design</strong> met niemand minder dan Tine Peeters van Studio Dott</p>
+			<h2>10u15 tot 12u15: Keynotes</h2>
+			<p><strong>Social design</strong></p>
+			<p><strong>Open Data & IA</strong></p>
+			<p><strong>Service design</strong> door Tine Peeters van Studio Dott</p>
 			<hr class="divider--dotted">
-			<h2>13u30 tot 16u: Cases of Hackathon</h2>
-			<p><strong>Case 1:</strong> Ontwerpen met dementie door NH</p>
-			<p><strong>Case 2:</strong> Co creatie door K van N</p>
-			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a></p>
+			<h2>13u tot 15u30: Cases, technieken en een  ackathon</h2>
+			<p><strong>6 cases</strong></p>
+          <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
-			<h2>Vanaf 16u30: Cocktail-o'clock</h2>
-			<p><strong>Afscheid</strong> etc.</p>
+			<h2>15u20: Tea time</h2>
+			<p>Round-up en groepsknuffel</p>
+          <h2>16u30: Cocktail-o'clock</h2>
+          <p>Proudly sponsored by <a href="http://www.namahn.com/">Namahn</a></p>
 		</div>
 	</div>
 </main>
