--- a/program.html
+++ b/program.html
@@ -13,12 +13,14 @@ published: true
 			<h2>9u30: Koffie met koekjes</h2>
 			<h2>10u: Officiële openingspeech</h2>
 			<hr class="divider--dotted">
-			<h2>10u15 tot 12u15: Keynotes</h2>
+			<h2>10u15: Keynotes</h2>
 			<p><strong>Social design</strong></p>
 			<p><strong>Open Data & IA</strong></p>
 			<p><strong>Service design</strong> door Tine Peeters van Studio Dott</p>
+          	<hr class="divider--dotted">
+          <h2>12u15: Lunch</h2>
 			<hr class="divider--dotted">
-			<h2>13u tot 15u30: Cases, technieken en een  ackathon</h2>
+			<h2>13u: Cases, technieken en een  ackathon</h2>
           <p><strong>6 cases:</strong>Door o.a. Nádia Ferreira en Anneleen Vanhoudt</p>
           <p><strong>3 technieken</strong></p>
           <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
