--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@ published: true
 			<h2>10u15: Keynotes</h2>
 			<p><strong>Social design</strong></p>
 			<p><strong>Open Data & IA</strong></p>
-			<p><strong>Service design</strong> door Tine Peeters van Studio Dott</p>
+			<p><strong>Service design</strong> door Tine Peeters</p>
           	<hr class="divider--dotted">
           <h2>12u15: Lunch</h2>
 			<hr class="divider--dotted">
