--- a/program.html
+++ b/program.html
@@ -21,8 +21,8 @@ published: true
           <h2>12u15: Lunch</h2>
 			<hr class="divider--dotted">
 			<h2>13u: Cases, technieken en een  ackathon</h2>
-          <p><strong>6 cases:</strong>Door o.a. Nádia Ferreira en Anneleen Vanhoudt</p>
-          <p><strong>3 technieken</strong>Door o.a. Koen Peeters</p>
+          <p><strong>6 cases:</strong> door o.a. Nádia Ferreira en Anneleen Vanhoudt</p>
+          <p><strong>3 technieken</strong> door o.a. Koen Peeters</p>
           <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
 			<h2>15u20: Tea time</h2>
