--- a/praktisch.html
+++ b/praktisch.html
@@ -15,12 +15,12 @@ published: true
 			2018 Antwerpen<br><a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A">Hoe rijd ik daar naar toe?</a></p>
 			<hr class="divider--dotted">
 			<h2>Met de trein</h2>
-			<p>Uitleg</p>
+			<p>Afstappen in Antwerpen Berchem en een stukje wandelen.</p>
 			<hr class="divider--dotted">
 			<h2>Parkeren</h2>
 			<p>Ingang ondergrondse parking langs de Karel Oomsstraat<br />
 			<a href="https://maps.google.be/maps?f=q&source=s_q&hl=nl&geocode&q=51.194633,+4.408996&aq&sll=51.194643,4.4088<br06&sspn=0.001503,0.003484&vpsrc=0&ie=UTF8&ll=51.194285,4.408672&spn=0.012022,0.027874&t=m&z=16&iwloc=A&layer=c&cbll=51.19455,4.40876&panoid=KinmZmsiyWxXpbZWWFWaoA&cbp=12,68.15,,0,
-4.33">Langs waar is da?</a></p>
+4.33">Hoe kom ik daar?</a></p>
 		</div>
 	</div>
 </main>
