--- a/program.html
+++ b/program.html
@@ -16,19 +16,19 @@ published: true
 			<h2>10u15: Keynotes</h2>
 			<p><strong>Social design</strong></p>
 			<p><strong>Open Data & IA</strong></p>
-          <p><strong>Service design</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
-          	<hr class="divider--dotted">
-          <h2>12u15: Lunch</h2>
+			<p><strong>Service design</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
 			<hr class="divider--dotted">
-			<h2>13u: Cases, technieken en een  ackathon</h2>
-          <p><strong>6 cases:</strong> door o.a. <a href="http://www.namahn.com/about/staff/n%C3%A1dia-ferreira">Nádia Ferreira</a> en <a href="http://www.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
-          <p><strong>3 technieken</strong> door o.a. <a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a></p>
-          <p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
+			<h2>12u15: Lunch</h2>
+			<hr class="divider--dotted">
+			<h2>13u: Cases, technieken en een hackathon</h2>
+			<p><strong>6 cases:</strong> door o.a. <a href="http://www.namahn.com/about/staff/n%C3%A1dia-ferreira">Nádia Ferreira</a> en <a href="http://www.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
+			<p><strong>3 technieken</strong> door o.a. <a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a></p>
+			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
 			<h2>15u20: Tea time</h2>
 			<p>Round-up en groepsknuffel</p>
-          <h2>16u30: Cocktail-o'clock</h2>
-          <p>Proudly sponsored by <a href="http://www.namahn.com/">Namahn</a></p>
+			<h2>16u30: Cocktail-o'clock</h2>
+			<p>Proudly sponsored by <a href="http://www.namahn.com/">Namahn</a></p>
 		</div>
 	</div>
 </main>
