--- a/program.html
+++ b/program.html
@@ -14,7 +14,7 @@ published: true
 			<h2>10u: Officiële openingspeech</h2>
 			<hr class="divider--dotted">
 			<h2>10u15: Keynotes</h2>
-			<p><strong>Social design</strong></p>
+          <p><strong>Social design</strong> dankzij <a href="http://www.socialspaces.be/">Niels Hendriks</a></p>
 			<p><strong>Open Data & IA</strong></p>
 			<p><strong>Service design</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
 			<hr class="divider--dotted">
