--- a/program.html
+++ b/program.html
@@ -15,7 +15,7 @@ published: true
 			<hr class="divider--dotted">
 			<h2>10u15: Keynotes</h2>
           <p><strong>Social design</strong> dankzij <a href="http://www.socialspaces.be/">Niels Hendriks</a></p>
-			<p><strong>Open Data & IA</strong></p>
+          <p><strong>Creatief met data </strong>door <a href="https://twitter.com/pietercolpaert">Pieter Colpaert</a></p>
 			<p><strong>Service design</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
 			<hr class="divider--dotted">
 			<h2>12u15: Lunch</h2>
