--- a/program.html
+++ b/program.html
@@ -16,19 +16,23 @@ published: true
 			<h2>10u15: Keynotes</h2>
           <p><strong>Social design</strong> dankzij <a href="http://www.socialspaces.be/">Niels Hendriks</a></p>
           <p><strong>Creatief met data </strong>door <a href="https://twitter.com/pietercolpaert">Pieter Colpaert</a></p>
-			<p><strong>Service design</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
+			<p><strong>Users First</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
 			<hr class="divider--dotted">
 			<h2>12u15: Lunch</h2>
 			<hr class="divider--dotted">
 			<h2>13u: Cases, technieken en een hackathon</h2>
-          <p><strong>6 cases:</strong> door o.a. <a href="http://tijsvrolix.com/">Tijs Vrolix</a> en <a href="http-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
+          <p><strong>6 cases:</strong> door o.a. <a href="http://www.namahn.com/about/staff/clementina-gentile">Clementina Gentile</a> en <a href="http://be.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
 			<p><strong>3 technieken</strong> door o.a. <a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a></p>
 			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
 			<h2>15u20: Tea time</h2>
 			<p>Round-up en groepsknuffel</p>
+          <h2>15u30: Hackothon show-off</h2>
+          	<h2>16u00: Closing Speech</h2>
+           <p>"Ai, ik ben een IA" van de hand van <a href="http://tijsvrolix.com/">Tijs Vrolix</a></p>
 			<h2>16u30: Cocktail-o'clock</h2>
 			<p>Proudly sponsored by <a href="http://www.namahn.com/">Namahn</a></p>
+         
 		</div>
 	</div>
 </main>
