--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@ published: true
 	<div class="row">
 		<header class="main__header">
 			<h1>{{ page.title }}</h1>
-			<p>Voorlopig hebben we plaats voor <strong>50 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="{{ site.url }}/program.html">mini-hackathon</a>, mag je dat zeker vermelden.</p>
+          <p>Voorlopig hebben we plaats voor <strong><del>50</del> 75 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="{{ site.url }}/program.html">mini-hackathon</a>, mag je dat zeker vermelden.</p>
 			<p>Wie inschrijft, maar <strong>niet opdaagt</strong> moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
 		</header>
 		<div class="iframe-embed main__body">
