--- a/program.html
+++ b/program.html
@@ -21,7 +21,12 @@ published: true
 			<h2>12u15: Lunch</h2>
 			<hr class="divider--dotted">
 			<h2>13u: Cases, technieken en een hackathon</h2>
-          <p><strong>6 cases:</strong> door o.a. <a href="http://www.namahn.com/about/staff/clementina-gentile">Clementina Gentile</a> en <a href="http://be.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
+          <p><strong>6 cases:</strong></p>
+          <p><a href="http://www.namahn.com/about/staff/clementina-gentile">Clementina Gentile</a>: The circle of care: connecting and empowering caregivers</p>
+<p><a href="http://be.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
+          <p><a href="http://www.linkedin.com/in/sarapieters">Sara Pieters</a>: VOORTuit met de geit</p>
+           <p><a href="http://www.linkedin.com/in/anniestewart">Annie Stewart</a>: Tranformation thru design</p>
+          <p><a href="http://wijs.be/nl/over-wijs/wijsneuzen">Bram Vanderhaeghe en Dieter Peirs</a>: Responsive prototyping</p>
 			<p><strong>3 technieken</strong> door o.a. <a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a></p>
 			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
