--- a/program.html
+++ b/program.html
@@ -27,7 +27,9 @@ published: true
           <p><a href="http://www.linkedin.com/in/sarapieters">Sara Pieters</a>: VOORTuit met de geit</p>
            <p><a href="http://www.linkedin.com/in/anniestewart">Annie Stewart</a>: Tranformation thru design</p>
           <p><a href="http://wijs.be/nl/over-wijs/wijsneuzen">Bram Vanderhaeghe en Dieter Peirs</a>: Responsive prototyping</p>
-			<p><strong>3 technieken</strong> door o.a. <a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a></p>
+          <p><strong>3x een techniek</strong></p>
+          <p><a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a>: Using co-creation to make design solutions that work</p>
+          <p><a href="http://www.linkedin.com/in/jurgentanghe">Jürgen Tanghe</a>: Service Design: Journeys & Interactions (2x)</p>
 			<p><strong>Mini-hackathon:</strong> was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
 			<h2>15u20: Tea time</h2>
