--- a/program.html
+++ b/program.html
@@ -26,7 +26,7 @@ published: true
 <p><a href="http://be.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
           <p><a href="http://www.linkedin.com/in/sarapieters">Sara Pieters</a>: VOORTuit met de geit</p>
            <p><a href="http://www.linkedin.com/in/anniestewart">Annie Stewart</a>: Tranformation thru design</p>
-          <p><a href="http://wijs.be/nl/over-wijs/wijsneuzen">Bram Vanderhaeghe en Dieter Peirs</a>: Responsive prototyping</p>
+          <p><a href="https://twitter.com/bram_">Bram Vanderhaeghe</a> en <a href="https://twitter.com/DieterPeirs">Dieter Peirs</a>: Responsive prototyping</p>
           <p><strong>3x een techniek</strong></p>
           <p><a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a>: Using co-creation to make design solutions that work</p>
           <p><a href="http://www.linkedin.com/in/jurgentanghe">Jürgen Tanghe</a>: Service Design: Journeys & Interactions (2x)</p>
