--- a/program.html
+++ b/program.html
@@ -30,7 +30,7 @@ published: true
           <p><strong>3x een techniek</strong></p>
           <p><a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a>: Using co-creation to make design solutions that work</p>
           <p><a href="http://www.linkedin.com/in/jurgentanghe">Jürgen Tanghe</a>: Service Design: Journeys & Interactions (2x)</p>
-          <p><strong>Mini-hackathon:</strong> </p><p>was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
+          <p><strong>Mini-hackathon</strong> </p><p>was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
 			<hr class="divider--dotted">
 			<h2>15u20: Tea time</h2>
 			<p>Round-up en groepsknuffel</p>
