Leeg maken (test)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ published: true
 			<h1>Informatie Architectuur <em>U was weer geweldig.</em></h1>
           <!--<p class="intro">
           <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
-			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>
+			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>-->
 		</div>
 	</div>
 </main>
 
-<aside class="blog blog--list">
+<!--<aside class="blog blog--list">
 	<div class="row">
 	{% for post in site.posts limit:4 %}
 		<article class="media media--block">
@@ -38,8 +38,8 @@ published: true
 		</article>
 	{% endfor %}
 	</div>
-</aside>
+</aside>-->
 
 <div class="cta cta--home">
-	<a href="{{ site.url }}/blog.html" title="Blog" class="btn btn--neg btn--go">Meer artikels lezen?</a>-->
+	<a href="{{ site.url }}/blog.html" title="Blog" class="btn btn--neg btn--go">Meer artikels lezen?</a>
 </div>
