Leeg maken twee

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ published: true
 	</div>
 </aside>-->
 
-<div class="cta cta--home">
+<!--<div class="cta cta--home">
 	<a href="{{ site.url }}/blog.html" title="Blog" class="btn btn--neg btn--go">Meer artikels lezen?</a>
-</div>
+</div>-->
