--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ published: true
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<p class="prelude">Embrace yourselfs</p>
+			<p class="prelude">Embrace yourselves</p>
           <h1>World IA Day<em><br/>Is coming soon.</em></h1>
           <!--<p class="intro">
           <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
