--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ published: true
 		<div style="width:100%; text-align:left;" >
   <iframe src="http://www.eventbrite.com/tickets-external?eid=13318996477&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
 </div>
-			
+<p>When information is clear and considerate of the context in which we need it, there is a certain peaceful joy that washes over us. We feel loved or cared for. We crave the feeling that someone carefully considered our needs and expectations. </p>
+<p>In Brussels we give the stage to small companies and organisation with big impact on this feeling. </p>			
 		</div>
 	</div>
 </main>
