--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@ published: true
 	<div class="row">
 		<div class="inner">
 			<p class="prelude">Embrace yourselves</p>
-          <h1>World IA Day is coming.<em><br/>Time to register</em></h1>
-          
+          <h1>World IA Day is coming.</h1>
+          <p>When information is clear and considerate of the context in which we need it, there is a certain peaceful joy that washes over us. We feel loved or cared for. We crave the feeling that someone carefully considered our needs and expectations. </p>
+<p>In Brussels we give the stage to small companies and organisation with big impact on this feeling. </p>
           <!--<p class="intro">
           <a href="https://maps.google.be/maps?q=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&hl=nl&ll=51.194904,4.411418&spn=0.009077,0.022724&sll=51.195538,4.411152&sspn=0.009077,0.022724&hnear=Generaal+Lemanstraat+47,+Antwerpen+2018+Antwerpen,+Vlaams+Gewest&t=m&z=16&iwloc=A" title="These Days">Antwerpen</a> op 15 februari. Op <a href="program.html">het programma</a> staan drie strakke keynotes, leerrijke cases en een mini-hackathon.</p>
 			<p><a href="{{ site.url }}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a></p>-->
-		
+		<h1><em>Time to register</em></h1>
 		<div style="width:100%; text-align:left;" >
   <iframe src="http://www.eventbrite.com/tickets-external?eid=13318996477&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
 </div>
-<p>When information is clear and considerate of the context in which we need it, there is a certain peaceful joy that washes over us. We feel loved or cared for. We crave the feeling that someone carefully considered our needs and expectations. </p>
-<p>In Brussels we give the stage to small companies and organisation with big impact on this feeling. </p>			
+			
 		</div>
 	</div>
 </main>
