--- a/inschrijven.html
+++ b/inschrijven.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Inschrijven
+title: Register
 section: register
 published: true
 ---
@@ -9,15 +9,17 @@ published: true
 	<div class="row">
 		<header class="main__header">
 			<h1>{{ page.title }}</h1>
-			<p>Voorlopig hebben we plaats voor <strong>50 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="programma.html">mini-hackathon</a>, mag je dat zeker vermelden. <br />Wie inschrijft, maar <strong>niet opdaagt</strong> moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
+			<p>Don't hesitate to register for this cosy and completely free event. We have <strong>50 seats</strong>, so clear your agenda for a Saterday full of knowledge and networking with UX experts.</p>
 		</header>
 		<div class="iframe-embed main__body">
-			<script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
+			<div style="width:100%; text-align:left;" >
+  <iframe src="http://www.eventbrite.com/tickets-external?eid=13318996477&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+</div>
 		</div>
 	</div>
 </main>
 
-<aside class="blog blog--list">
+<!--<aside class="blog blog--list">
 	<div class="row">
 	{% for post in site.posts limit:4 %}
 		<article class="media media--block">
@@ -38,4 +40,4 @@ published: true
 		</article>
 	{% endfor %}
 	</div>
-</aside>
+</aside>-->
