--- a/inschrijven.html
+++ b/inschrijven.html
@@ -11,11 +11,11 @@ published: true
 			<h1>{{ page.title }}</h1>
 			<p>Don't hesitate to register for this cosy and completely free event. We have <strong>50 seats</strong>, so clear your agenda for a Saterday full of knowledge and networking with UX experts.</p>
 		</header>
-		<div class="iframe-embed main__body">
-			<div style="width:100%; text-align:left;" >
+	
+			<div style="width:100%; text-align:left;" class="iframe-embed main__body">
   <iframe src="http://www.eventbrite.com/tickets-external?eid=13318996477&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
 </div>
-		</div>
+	
 	</div>
 </main>
 
