--- a/inschrijven.html
+++ b/inschrijven.html
@@ -9,7 +9,7 @@ published: true
 	<div class="row">
 		<header class="main__header">
 			<h1>{{ page.title }}</h1>
-			<p>Don't hesitate to register for this cosy and completely free event. We have <strong>50 seats</strong>, so clear your agenda for a Saterday full of knowledge and networking with UX experts.</p>
+			<p>Don't hesitate to register for this cosy and completely free event. <br>We have <strong>50 seats</strong>, so clear your agenda for a Saterday full of knowledge and networking with UX experts.</p>
 		</header>
 	
 			<div style="width:100%; text-align:left;" class="iframe-embed main__body">
