--- a/program.html
+++ b/program.html
@@ -8,37 +8,25 @@ published: true
 <main class="hero">
 	<div class="row">
 		<div class="inner">
-			<h1>Programma</h1>
+			<h1>Program</h1>
 			<hr>
-			<h2>9u30: Koffie met koekjes</h2>
-			<h2>10u: Officiële openingspeech</h2>
+			<h2>9u30: Breakfast and coffee</h2>
+			<h2>10u: Official start</h2>
 			<hr class="divider--dotted">
-			<h2>10u15: Keynotes</h2>
-          <p><strong>Social design</strong> dankzij <a href="http://www.socialspaces.be/">Niels Hendriks</a></p>
-          <p><strong>Creatief met data </strong>door <a href="https://twitter.com/pietercolpaert">Pieter Colpaert</a></p>
-			<p><strong>Users First</strong> door <a href="https://twitter.com/Tine_Peeters">Tine Peeters</a></p>
+			<h2>Keynotes</h2>
+			
+			<p><strong>Responsive design:creating a unique user experience</strong> by Sjoera Roggeman, Human Interface Group</p>
+			<p><strong>"On tortoises and hares"</strong> by Annie Stewart & Pieter Rahier, Internet architects</p>
+			<p><strong>Case Study: A Interactive Negotiation Tool</strong> by Dimitrie Stefanescu, BVB architects</p>
+			<p><strong>Case study: the EYD 2015 website for the European Commission</strong> by Koen Peters and Maarten Segers, Namahn & Amplexor</p>
 			<hr class="divider--dotted">
-			<h2>12u15: Lunch</h2>
-			<hr class="divider--dotted">
-			<h2>13u: Cases, technieken en een hackathon</h2>
-          <p><strong>6 cases:</strong></p>
-          <p><a href="http://www.namahn.com/about/staff/clementina-gentile">Clementina Gentile</a>: The circle of care: connecting and empowering caregivers</p>
-<p><a href="http://be.linkedin.com/pub/anneleen-vanhoudt/28/907/934">Anneleen Vanhoudt</a></p>
-          <p><a href="http://www.linkedin.com/in/sarapieters">Sara Pieters</a>: VOORTuit met de geit</p>
-           <p><a href="http://www.linkedin.com/in/anniestewart">Annie Stewart</a>: Tranformation thru design</p>
-          <p><a href="https://twitter.com/bram_">Bram Vanderhaeghe</a> en <a href="https://twitter.com/DieterPeirs">Dieter Peirs</a>: Responsive prototyping</p>
-          <p><strong>3x een techniek</strong></p>
-          <p><a href="http://www.namahn.com/about/staff/koen-peters">Koen Peters</a>: Using co-creation to make design solutions that work</p>
-          <p><a href="http://www.linkedin.com/in/jurgentanghe">Jürgen Tanghe</a>: Service Design: Journeys & Interactions (2x)</p>
-          <p><strong>Mini-hackathon</strong> </p><p>was er nog een probleem die de wereld uit mag? Laat het weten bij je <a href="register.html">inschrijving</a>. Onder deskundige leiding van <a href="http://twitter.com/hannesdh">Hannes</a></p>
-			<hr class="divider--dotted">
-			<h2>15u20: Tea time</h2>
-			<p>Round-up en groepsknuffel</p>
-          <h2>15u30: Hackothon show-off</h2>
-          	<h2>16u00: Closing Speech</h2>
-           <p>"Ai, ik ben een IA" van de hand van <a href="http://tijsvrolix.com/">Tijs Vrolix</a></p>
-			<h2>16u30: Cocktail-o'clock</h2>
-			<p>Proudly sponsored by <a href="http://www.namahn.com/">Namahn</a></p>
+			<h2>Workshops</h2>
+			<p><strong>Sketchnotes as a tool to synthesize and engage meaningful communication</strong> by Nadia Ferreira, Nascom</p>
+			<p><strong>Cities, data and happiness</strong> by Sofie Dieltjens, Tine Peeters, Dries De Roeck, Studiodott</p>
+			
+	<hr class="divider--dotted">
+          	<h2>17u00: Closing Speech & Drinks</h2>
+         
          
 		</div>
 	</div>
