--- a/program.html
+++ b/program.html
@@ -34,7 +34,7 @@ published: true
 
 <aside class="cta cta--post">
 	<div class="row">
-		<h3>Helemaal overtuigd ?</h3>
-		<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
+		<h3>Ready for this?</h3>
+		<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Register for free</a>
 	</div>
 </aside>
