--- a/register.html
+++ b/register.html
@@ -9,12 +9,13 @@ published: true
 	<div class="row">
 		<header class="main__header">
 			<h1>{{ page.title }}</h1>
-          <p>Voorlopig hebben we plaats voor <strong><del>50</del> 75 deelnemers</strong>. Als je een goed 'probleem' hebt waarrond we kunnen werken op de <a href="{{ site.url }}/program.html">mini-hackathon</a>, mag je dat zeker vermelden.</p>
-			<p>Wie inschrijft, maar <strong>niet opdaagt</strong> moeten we jammergenoeg tijdens het evenement vermelden op de Wall of Shame.</p>
+			<p>Don't hesitate to register for this cosy and completely free event. <br>We have <strong>50 seats</strong>, so clear your agenda for a Saterday full of knowledge and networking with UX experts.</p>
 		</header>
-		<div class="iframe-embed main__body">
-			<script type="text/javascript" src="http://twikilist.com/include/WIAD2014Antwerpen"></script>
-		</div>
+	
+			<div style="width:100%; text-align:left;" class="iframe-embed main__body">
+  <iframe src="http://www.eventbrite.com/tickets-external?eid=13318996477&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+</div>
+	
 	</div>
 </main>
 
