--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@ published: true
 	
 	</div>
 </main>
-
+<!--
 <aside class="blog blog--list">
 	<div class="row">
 	{% for post in site.posts limit:4 %}
@@ -40,4 +40,4 @@ published: true
 		</article>
 	{% endfor %}
 	</div>
-</aside>
+</aside>-->
